Revert "Alterations in Views2"
modifications in pages

--- a/ViewAulus/Views/Carriers/Create.cshtml
+++ b/ViewAulus/Views/Carriers/Create.cshtml
@@ -25,7 +25,8 @@
                                     </div>
 
 
-                                    <input name="__RequestVerificationToken" type="hidden" value="V-yXyr-xXiSR2Wk51f0oV7dvmxupQ0gBCEIXmDNgooTK4JXfg8UX9wRrwtHIrXOYAgMRn1Jgo-p3pvncu21xIPieO4LsK03C98jhnpU15wU1" />
+                                    @Html.AntiForgeryToken()
+
 
                                     <div class="form-horizontal">
 
