--- a/ViewAulus/Views/Opacities/Create.cshtml
+++ b/ViewAulus/Views/Opacities/Create.cshtml
@@ -25,7 +25,8 @@
                                     </div>
 
 
-                                    <input name="__RequestVerificationToken" type="hidden" value="k5ztnsoADhpHKAnwziW_ALPwfHUKvzixtdOcoDLpGJfDZbyo460Vtv_DCSniT4mVUUIjgpwkor-HhsVDqpQsRgEjGJhA0eS6sluTJ2rh5v41" />
+                                    @Html.AntiForgeryToken()
+
 
                                     <div class="form-horizontal">
 
