--- a/ViewAulus/Views/Categories/Create.cshtml
+++ b/ViewAulus/Views/Categories/Create.cshtml
@@ -24,8 +24,7 @@
             </div>
 
 
-            <input name="__RequestVerificationToken" type="hidden" value="6WME1OMwyytkX-6V7IUVcP5TbS1Vq2hs9iHiO_xqYTSvX6SjxGrgJ60CblTqWlWeqNeWzQhnEB86qGrTYHqNVbRGRxBzqOaVR0q9AjJfjvM1" />
-
+            @Html.AntiForgeryToken()
             <div class="form-horizontal">
 
                 <div class="form-group">
