--- a/ViewAulus/Views/Employees/Index.cshtml
+++ b/ViewAulus/Views/Employees/Index.cshtml
@@ -4,12 +4,12 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 <div class="panel spacer-20">
     <div class="panel-heading no-padding">
         <a href="#" class="panel-expander notext fr">&nbsp;</a>
         <h2 class="clipboard">Employee</h2>
     </div>
-
     <div class="panel-container">
         <div class="options">
             <ul>
@@ -17,69 +17,118 @@
             </ul>
         </div>
 
-
-        <table class="table gn-table">
+       <table class="table2 gn-table">
             <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Email)
-                </th>
                 <th>
                     @Html.DisplayNameFor(model => model.Name)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Description)
+                    @Html.DisplayNameFor(model => model.LastName)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.CreationDate)
+                    @Html.DisplayNameFor(model => model.Birthday)
+                <th>
+                    @Html.DisplayNameFor(model => model.MaritalStatus)
+                <th>
+                    @Html.DisplayNameFor(model => model.Address)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.LastUpdate)
+                    @Html.DisplayNameFor(model => model.City)
                 </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.State)
+                </th>
+                  <th>
+                    @Html.DisplayNameFor(model => model.ZipCode)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Status)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Department)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Email)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Telephone)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Title)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.HireDate)
+                </th>
+
                 <th colspan="2"></th>
             </tr>
+               
 
             @foreach (var item in Model)
             {
                 <tr>
                     <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>              
+                    <td>
+                        @Html.DisplayFor(modelItem => item.LastName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Birthday)
+                    </td>   
+                    <td>
+                        @Html.DisplayFor(modelItem => item.MaritalStatus)
+                    </td>          
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Address)
+                    </td>   
+                    <td>
+                        @Html.DisplayFor(modelItem => item.City)
+                    </td>                 
+                    <td>
+                        @Html.DisplayFor(modelItem => item.State)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ZipCode)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Status)
+                    </td>
+
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Department)
+                    </td>
+                    <td>
                         @Html.DisplayFor(modelItem => item.Email)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Name)
+                        @Html.DisplayFor(modelItem => item.Telephone)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Description)
+                        @Html.DisplayFor(modelItem => item.Title)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.CreationDate)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.LastUpdate)
+                        @Html.DisplayFor(modelItem => item.HireDate)
                     </td>
 
-                    <td align="center">
-                        <div class="btn btn-default">
-                            @Html.ActionLink("Edit", "Edit", new { id = item.Id })
-                        </div>
+                    <td align="right">
+                        <a href="/Employees/Edit/@item.Id">Edit</a>
                     </td>
                     <td align="left">
-
-                        <form action="/Customers/Delete/@item.Id " method="post" onsubmit="return confirm('Do you really want delete the Employee: @item.Name ?');">
+                        <form action="/Employees/Delete/@item.Id " method="post">
                             @Html.AntiForgeryToken()
 
-                            <a href="#" class="delete" onclick="this.parentNode.submit(); return confirm('Do you really want delete the Employee : @item.Name ?');"> Delete</a>
+                            <a href="#" class="delete" onclick="this.parentNode.submit(); return confirm('Do you really want delete the Employee: @item.Name? ');"> Delete </a>
 
                         </form>
-
                     </td>
-
                 </tr>
             }
-
             <tr>
-                <td colspan="4" align="left"></td>
+                <td colspan="2" align="left"></td>
+                <td colspan="2" align="left"></td>
             </tr>
-
         </table>
     </div>
- </div>
+</div>
+
