--- a/ViewAulus/Views/Packagings/Create.cshtml
+++ b/ViewAulus/Views/Packagings/Create.cshtml
@@ -5,46 +5,46 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<div class="panel spacer-20">
+    <div class="panel-heading no-padding">
+        <a href="#" class="panel-expander notext fr">&nbsp;</a>
+        <h2 class="clipboard">Create Packaging </h2>
+    </div>
+    <form action="/Packagings/Create" id="create" method="post">
 
-                        <div class="panel spacer-20">
-                            <div class="panel-heading no-padding">
-                                <a href="#" class="panel-expander notext fr">&nbsp;</a>
-                                <h2 class="clipboard">Create Packaging </h2>
-                            </div>
-                            <form action="/Packagings/Create" id="create" method="post">
-                                <div class="panel-container">
-                                    <div class="options">
-                                        <ul>
-                                            <li>
-
-                                                <a class="post" href='javascript:create.submit()'>Post</a>
-                                            </li>
-
-                                            <li><a class="cancel" href="/Packagings?Length=0">Cancel</a></li>
-                                        </ul>
-                                    </div>
+            <div class="panel-container">
+                <div class="options">
+                    <ul>
+                        <li>
+                            @*@Html.ActionLink("Post", "Create", "", new { @class = "post" })*@
+                            <a class="post" href='javascript:create.submit()'>Post</a>
+                        </li>
+                        <li><a class="cancel" href="/Packagings?Length=0">Cancel</a></li>
+                    </ul>
+                </div>
 
 
-                                    <input name="__RequestVerificationToken" type="hidden" value="oyvmE_OKfXufAKmRIT_w1Cb3lXyxibf8_WgUqUhxcoz4XQYP1KYe17aSqrkUCbfNVIbfnsD3gd8CNOps6t-QgYSzJdlSlovCLLc5_IoJ2EE1" />
+                @Html.AntiForgeryToken()
 
-                                    <div class="form-horizontal">
 
-                                        <div class="form-group">
-                                            <label class="control-label col-md-2" for="Name">Name</label>
-                                            <div class="col-md-10">
-                                                <input class="form-control text-box single-line" id="Name" name="Name" type="text" value="" />
-                                                <span class="field-validation-valid text-danger" data-valmsg-for="Name" data-valmsg-replace="true"></span>
-                                            </div>
-                                        </div>
-
-                                        <div class="form-group">
-                                            <label class="control-label col-md-2" for="Description">Description</label>
-                                            <div class="col-md-10">
-                                                <input class="form-control text-box single-line" id="Description" name="Description" type="text" value="" />
-                                                <span class="field-validation-valid text-danger" data-valmsg-for="Description" data-valmsg-replace="true"></span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </form>
+                <div class="form-horizontal">
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        <label class="control-label col-md-2" for="Name">Name</label>
+                        <div class="col-md-10">
+                            <input class="form-control text-box single-line" id="Name" name="Name" type="text" value="" />
+                            <span class="field-validation-valid text-danger" data-valmsg-for="Name" data-valmsg-replace="true"></span>
                         </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="control-label col-md-2" for="Description">Description</label>
+                        <div class="col-md-10">
+                            <input class="form-control text-box single-line" id="Description" name="Description" type="text" value="" />
+                            <span class="field-validation-valid text-danger" data-valmsg-for="Description" data-valmsg-replace="true"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+          </form>
+        </div>
