--- a/ViewAulus/Views/TargetTypes/Edit.cshtml
+++ b/ViewAulus/Views/TargetTypes/Edit.cshtml
@@ -10,40 +10,46 @@
         <h2 class="clipboard">Edit Target Type</h2>
     </div>
 
-    <form action="/TargetTypes/Edit/2" id="create" method="post">
-            <div class="panel-container">
-                <div class="options">
-                    <ul>
-                        <li>
-                            @*@Html.ActionLink("Post", "Create", "", new { @class = "post" })*@
-                            <a class="post" href='javascript:create.submit()'>Post</a>
-                        </li>
+    @using (Html.BeginForm("Edit", "TargetTypes", FormMethod.Post, new { id = "create" }))
+    {<div class="panel-container">
+        <div class="options">
+            <ul>
+                <li>
+                    @*@Html.ActionLink("Post", "Create", "", new { @class = "post" })*@
+                    <a class="post" href='javascript:create.submit()'>Post</a>
+                </li>
 
-                        <li><a class="cancel" href="/TargetTypes?Length=0">Cancel</a></li>               
-                    </ul>
-                </div>
+                <li>@Html.ActionLink("Cancel", "Index", "", new { @class = "cancel" })</li>
+            </ul>
+        </div>
 
-                <input name="__RequestVerificationToken" type="hidden" value="dqh95BVo6ebn6qqGyQC2CbhaZJFa3J3ru6Yl14bZt39MHUB-ebTt3FGLeQ1ELeJe_edE3EmSGiSntTcLOuoDPmdUZPuQ7qN5lObkUD2N4kM1" />
-                <div class="form-horizontal table2 gn-table">
+        @Html.AntiForgeryToken()
 
-                    <input data-val="true" data-val-number="O campo Id deve ser um número." data-val-required="O campo Id é obrigatório." id="Id" name="Id" type="hidden" value="2" />
+         <div class="form-horizontal table2 gn-table">
 
-                    <div class="form-group">
-                        <div class="col-md-10">
-                            <input class="form-control text-box single-line" id="Name" name="Name" type="text" value="asa" />
-                            <span class="field-validation-valid text-danger" data-valmsg-for="Name" data-valmsg-replace="true"></span>
-                        </div>
-                    </div>
+             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+             @Html.HiddenFor(model => model.Id)
 
-                    <div class="form-group">
-                        <label class="control-label col-md-2" for="Description">Description</label>
-                        <div class="col-md-10">
-                            <input class="form-control text-box single-line" id="Description" name="Description" type="text" value="asa" />
-                            <span class="field-validation-valid text-danger" data-valmsg-for="Description" data-valmsg-replace="true"></span>
-                        </div>
-                    </div>
+             <div class="form-group">
+                 @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+                 <div class="col-md-10">
+                     @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                     @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                 </div>
+             </div>
 
-                </div>
-            </div>
-         </form>
-      </div>
+             <div class="form-group">
+                 @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
+                 <div class="col-md-10">
+                     @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+                     @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+                 </div>
+             </div>
+
+            
+            
+         </div>
+    </div>
+         }
+
+</div>
