--- a/ViewAulus/Views/Customers/Create.cshtml
+++ b/ViewAulus/Views/Customers/Create.cshtml
@@ -29,13 +29,8 @@
                                         </ul>
                                     </div>
 
-                                    <input name="__RequestVerificationToken" type="hidden" value="Dt34sZMVWDaj1KzEk5HnK14SQYE7BsOBFLr3lNpH0r7r27ef2ab7XLnbGneUqxywCTT6ZITWatiIbcncitSh-jEdtFHtNHaPcjgKTPZop9w1" />
-
+                              @Html.AntiForgeryToken()
                                     <div class="form-horizontal">
-
-
-
-
                                         <div class="formula">
                                             <div class="tabs m-t-20">
                                                 <ul>
