--- a/ViewAulus/Views/Carriers/Edit.cshtml
+++ b/ViewAulus/Views/Carriers/Edit.cshtml
@@ -10,7 +10,7 @@
         <a href="#" class="panel-expander notext fr">&nbsp;</a>
         <h2 class="clipboard">Edit Carrier</h2>
     </div>
-    <form action="/Carriers/Edit/7" id="create" method="post">
+    <form action="/Carriers/Edit/@Model.Id" id="create" method="post">
      
             <div class="panel-container">
                 <div class="options">
@@ -26,14 +26,13 @@
 
       @Html.AntiForgeryToken()
                 <div class="form-horizontal">
-                    <input data-val="true" data-val-number="O campo Id deve ser um número." data-val-required="O campo Id é obrigatório." id="Id" name="Id" type="hidden" value="7" />
+                    <input data-val="true" data-val-number="O campo Id deve ser um número." data-val-required="O campo Id é obrigatório." id="Id" name="Id" type="hidden" value="@Model.Id" />
 
 
                     <div class="form-group">
                         <label class="control-label col-md-2" for="Name">Name</label>
                         <div class="col-md-10">
-                            <input class="form-control text-box single-line" id="Name" name="Name" type="text" value="J" />
-                            <span class="field-validation-valid text-danger" data-valmsg-for="Name" data-valmsg-replace="true"></span>
+                            <input class="form-control text-box single-line" id="Name" name="Name" type="text" value="@Model.Name" />
                         </div>
 
                     </div>
@@ -41,8 +40,7 @@
                     <div class="form-group">
                         <label class="control-label col-md-2" for="Description">Description</label>
                         <div class="col-md-10">
-                            <input class="form-control text-box single-line" id="Description" name="Description" type="text" value="asa" />
-                            <span class="field-validation-valid text-danger" data-valmsg-for="Description" data-valmsg-replace="true"></span>
+                            <input class="form-control text-box single-line" id="Description" name="Description" type="text" value="@Model.Description" />
                         </div>
                     </div>
                 </div>
