--- a/ViewAulus/Views/CustomerResins/Edit.cshtml
+++ b/ViewAulus/Views/CustomerResins/Edit.cshtml
@@ -10,7 +10,7 @@
         <h2 class="clipboard">Edit Customer Resin</h2>
     </div>
 
-    <form action="/CustomerResins/Edit/1" id="create" method="post">
+    <form action="/CustomerResins/Edit/@Model.Id" id="create" method="post">
         <div class="panel-container">
             <div class="panel-container">
                 <div class="options">
@@ -20,47 +20,40 @@
                             <a class="post" href='javascript:create.submit()'>Post</a>
                         </li>
 
-                        <li><a class="cancel" href="/RawMaterials?Length=0">Cancel</a></li>
+                        <li><a class="cancel" href="/CustomerResins?Length=0">Cancel</a></li>
                     </ul>
                 </div>
-                <input name="__RequestVerificationToken" type="hidden" value="eZ2HKHwkTBlPUSSjJpas9YM0BkX-T8CMxa31sPcvhFNnZz5g3rBmeXb-wHCguRzZfgiM-GKEqH-FGqtftqTGTDPcDMU1JuAVmWTC_-jdvKI1" />
 
 
+                 @Html.AntiForgeryToken()
                 <div class="form-horizontal">
-
-
-
-                    <input data-val="true" data-val-number="O campo Id deve ser um número." data-val-required="O campo Id é obrigatório." id="Id" name="Id" type="hidden" value="2" />
+                    <input data-val="true" data-val-number="O campo Id deve ser um número." data-val-required="O campo Id é obrigatório." id="Id" name="Id" type="hidden" value="@Model.Id" />
 
                     <div class="form-group">
                         <label class="control-label col-md-2" for="ResinType">ResinType</label>
                         <div class="col-md-10">
-                            <input class="form-control text-box single-line" id="ResinType" name="ResinType" type="text" value="teste" />
-                            <span class="field-validation-valid text-danger" data-valmsg-for="ResinType" data-valmsg-replace="true"></span>
+                            <input class="form-control text-box single-line" id="ResinType" name="ResinType" type="text" value="@Model.ResinType" />
                         </div>
                     </div>
 
                     <div class="form-group">
                         <label class="control-label col-md-2" for="Quantidade">Quantidade</label>
                         <div class="col-md-10">
-                            <input class="form-control text-box single-line" data-val="true" data-val-number="O campo Quantidade deve ser um número." data-val-required="O campo Quantidade é obrigatório." id="Quantidade" name="Quantidade" type="number" value="-2" />
-                            <span class="field-validation-valid text-danger" data-valmsg-for="Quantidade" data-valmsg-replace="true"></span>
+                            <input class="form-control text-box single-line" data-val="true" data-val-number="O campo Quantidade deve ser um número." data-val-required="O campo Quantidade é obrigatório." id="Quantidade" name="Quantidade" type="number" value="@Model.Quantidade" />
                         </div>
                     </div>
 
                     <div class="form-group">
                         <label class="control-label col-md-2" for="Code">Code</label>
                         <div class="col-md-10">
-                            <input class="form-control text-box single-line" id="Code" name="Code" type="text" value="zxzx" />
-                            <span class="field-validation-valid text-danger" data-valmsg-for="Code" data-valmsg-replace="true"></span>
+                            <input class="form-control text-box single-line" id="Code" name="Code" type="text" value="@Model.Code" />
                         </div>
                     </div>
 
                     <div class="form-group">
                         <label class="control-label col-md-2" for="Name">Name</label>
                         <div class="col-md-10">
-                            <input class="form-control text-box single-line" id="Name" name="Name" type="text" value="zx" />
-                            <span class="field-validation-valid text-danger" data-valmsg-for="Name" data-valmsg-replace="true"></span>
+                            <input class="form-control text-box single-line" id="Name" name="Name" type="text" value="@Model.Name" />
                         </div>
                     </div>
                 </div>
@@ -68,13 +61,10 @@
                 <div class="form-group">
                     <label class="control-label col-md-2" for="Description">Description</label>
                     <div class="col-md-10">
-                        <input class="form-control text-box single-line" id="Description" name="Description" type="text" value="zx" />
+                        <input class="form-control text-box single-line" id="Description" name="Description" type="text" value="@Model.Description" />
                         <span class="field-validation-valid text-danger" data-valmsg-for="Description" data-valmsg-replace="true"></span>
                     </div>
                 </div>
-
-
-
             </div>
         </div>
     </form>
