--- a/ViewAulus/Views/RawMaterials/Create.cshtml
+++ b/ViewAulus/Views/RawMaterials/Create.cshtml
@@ -37,12 +37,12 @@
                                 <div class="form-group">
                                     <div class="col">
                                         <label class="control-label col-md-2" for="Code">Code</label>
-                                        <input class="form-control text-box single-line" id="Code" name="x" type="text" value="" />
+                                        <input class="form-control text-box single-line" id="Code" name="Code" type="text" value="" />
                                         <span class="field-validation-valid text-danger" data-valmsg-for="Code" data-valmsg-replace="true"></span>
                                     </div>
                                     <div class="col">
                                         <label class="control-label col-md-2" for="Name">Name</label>
-                                        <input class="form-control text-box single-line" id="Name" name="x" type="text" value="" />
+                                        <input class="form-control text-box single-line" id="Name" name="Name" type="text" value="" />
                                         <span class="field-validation-valid text-danger" data-valmsg-for="Name" data-valmsg-replace="true"></span>
                                     </div>
                                     <div class="col">
