--- a/ViewAulus/Views/Customers/Create.cshtml
+++ b/ViewAulus/Views/Customers/Create.cshtml
@@ -26,6 +26,8 @@
                                             <li><a href="#" class="new">New</a></li>
                                             <li><a href="#" class="delete">Delete</a></li>
                                             <li><a href="#" class="search">Search</a></li>
+                                         
+
                                         </ul>
                                     </div>
 
@@ -44,17 +46,18 @@
                                             <div class="tab-container">
                                                 <div class="tab tab-active" id="tab1">
                                                     <div class="order-info">
-                                                        <div class="fields-row">
+                                                        <div class="fields-row ">
                                                             <div class="fields-bar">
-                                                                <div class="form-group">
+                                                                <div class="form-group ">
                                                                     <div class="col">
                                                                         <label>Name</label>
                                                                         <input type="text" name="Name" ng-model="Code" class="form-control" />
 
                                                                     </div>
-                                                                    <div class="col">
+                                                                    
+                                                                    <div class="col little">
                                                                         <label>Status</label>
-                                                                        <select class="form-control">
+                                                                        <select class="form-control little ">
                                                                             <option value="true">Active</option>
                                                                             <option value="false">Inactive</option>
                                                                         </select>
